# twiga

./: .all-contributorsrc  .dockerignore  .env.template  .env.template.simple  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  example.env  hello.py  pyproject.toml  webhook.py  whatsapp_client.py  whatsapp_sample.py
.github/: CODE_OF_CONDUCT.md  SECURITY.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci-cd.yml  ci_cd.yml  gitguardian.yml  lint.yml  neon_workflow.yml  pre-commit.yml  pre_commit.yml  release.yml
app/: __init__.py  cli.py  config.py  main.py  metrics.py  router.py  scheduler.py  security.py  webhook.py  whatsapp_client.py  whatsapp_service.py
app/clients/: agent_client.py  client_base.py  llm_client.py  whatsapp_client.py
app/database/: database.py  db.py  engine.py  enums.py  models.py  utils.py  vector_database.py
app/decorators/: security.py
app/latex/: latex_artifact_generator.py
app/models/: message_models.py
app/monitoring/: metrics.py
app/redis/: engine.py  redis_keys.py
app/services/: agent_client.py  citation_service.py  client_base.py  exam_delivery_service.py  exam_pdf_generation_service.py  feedback_service.py  flow_service.py  latex_image_service.py  llm_service.py  messaging_service.py  onboarding_service.py  openai_service.py  rate_limit_service.py  request_service.py  state_service.py  wa_service.py  whatsapp_service.py
app/tools/: README.md  __init__.py  generate_exercise.py  internal_args.py  registry.py  tool_manager.py
app/utils/: background_tasks_utils.py  embedder.py  enums.py  flow_utils.py  flows_util.py  helpers.py  llm_utils.py  logging_utils.py  message_processor.py  paths.py  prompt_manager.py  rate_limit_utils.py  string_manager.py  whatsapp_utils.py  yaml_config.py
assets/: class_subject_info_flow.json  prompts.py
assets/flows/: send_personal_and_school_info_flow.json
assets/preprompts/: exercise_generator  prompts.py
aws/: dynamo_builder.py
db/: dynamo_utils.py  utils.py
docker/deploy/: Dockerfile
docker/dev/: docker-compose.yml
docs/: PRIVACY.md
docs/en/: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  GIT_GUIDELINES.md  MIGRATIONS.md  MOCK_WHATSAPP_GETTING_STARTED.md
docs/sw/: KUANZA.md  KUANZA_NA_WHATSAPP_BANDIA.md  KUCHANGIA.md  MWONGOZO_WA_GIT.md  UHAMISHAJI.md  USANIFU.md
migrations/: env.py  script.py.mako
migrations/versions/: 04faf4381e00_init_setup.py  1b6c6eb7dced_create_classes_resources_and_sections_.py  1d89a63f727b_cascade_delete_on_subject_classes.py  1dbf4eba51d0_add_tool_fields_to_messages.py  202412211644_init_schema.py  350254423256_create_chunks_table.py  40ef9772ad6c_add_new_subjects_to_db.py  5805e9679e62_add_resources_table.py  63ac8f1e9b4c_add_approved_to_userstate_enum.py  6f8fd9bd57d1_add_is_present_in_conversation_to_messages.py  73f44a8fad0a_fix_children_under_sections.py  88ad380e8929_.py  c560649293d7_init_db.py  (+19 more)
monitoring/: README.md  docker-compose.monitoring.yml
prisma/: schema.prisma
scripts/: __init__.py
tests/: conftest.py  llm_client_tests.py  test_exam_pdf_generator_rendering.py  test_feedback_flow.py  test_image_delivery.py  test_latex_messaging.py  test_main.py  test_math_doc_generation.py  test_message_conversation_presence.py  test_reembedding_scripts.py  test_solve_equation.py  test_whatsapp_send_image.py
(+153 files in other folders)
