[project]
name = "twiga"
version = "0.1.3"
description = "A WhatsApp chatbot for Tanzanian Teachers"
readme = "README.md"
authors = [
    { name = "Victor Oldensand", email = "victormag24@gmail.com" }
]
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "alembic>=1.13.3",
    "apscheduler>=3.11.0",
    "asyncpg>=0.29.0",
    "backoff>=2.2.1",
    "colorlog>=6.8.2",
    "cryptography>=43.0.3",
    "fastapi>=0.115.0",
    "greenlet>=3.1.1",
    "httpx>=0.27.2",
    "langchain-core>=0.3.15",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.2.6",
    "langchain-together>=0.2.0",
    "pgvector>=0.3.5",
    "pre-commit>=4.0.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.5.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2024.2",
    "redis>=5.2.1",
    "sqlmodel>=0.0.22",
    "tiktoken>=0.8.0",
    "uvicorn>=0.32.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { include = ["app", "scripts"] }

[tool.uv]
dev-dependencies = [
    "requests>=2.32.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.scripts]
all-contributors = "scripts.ci.all_contributors:main"
